# cube_rotation_sdl

./: .gitignore  CMakeLists.txt  README.md  main.c
Modules/: FindSDL2.cmake
Modules/SDL2-2.30.9/i686-w64-mingw32/lib/cmake/SDL2/: SDL2Config.cmake  SDL2mainTargets.cmake  SDL2staticTargets.cmake
Modules/SDL2-2.30.9/test/: CMakeLists.txt
Modules/SDL2-2.30.9/x86_64-w64-mingw32/lib/cmake/SDL2/: SDL2Targets.cmake  SDL2mainTargets.cmake  SDL2testTargets.cmake
